crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI043_PYI043.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI043 Private type alias `_PrivateAliasT` should not be suffixed with `T` (the `T` suffix implies that an object is a `TypeVar`)
  --> PYI043.py:10:1
   |
 8 | )
 9 |
10 | _PrivateAliasT: TypeAlias = str | int  # PYI043, since this ends in a T
   | ^^^^^^^^^^^^^^
11 | _PrivateAliasT2: TypeAlias = typing.Any  # PYI043, since this ends in a T
12 | _PrivateAliasT3: TypeAlias = Literal[

PYI043 Private type alias `_PrivateAliasT2` should not be suffixed with `T` (the `T` suffix implies that an object is a `TypeVar`)
  --> PYI043.py:11:1
   |
10 | _PrivateAliasT: TypeAlias = str | int  # PYI043, since this ends in a T
11 | _PrivateAliasT2: TypeAlias = typing.Any  # PYI043, since this ends in a T
   | ^^^^^^^^^^^^^^^
12 | _PrivateAliasT3: TypeAlias = Literal[
13 |     "not", "a", "chance"

PYI043 Private type alias `_PrivateAliasT3` should not be suffixed with `T` (the `T` suffix implies that an object is a `TypeVar`)
  --> PYI043.py:12:1
   |
10 | _PrivateAliasT: TypeAlias = str | int  # PYI043, since this ends in a T
11 | _PrivateAliasT2: TypeAlias = typing.Any  # PYI043, since this ends in a T
12 | _PrivateAliasT3: TypeAlias = Literal[
   | ^^^^^^^^^^^^^^^
13 |     "not", "a", "chance"
14 | ]  # PYI043, since this ends in a T

PYI043 Private type alias `_FooT` should not be suffixed with `T` (the `T` suffix implies that an object is a `TypeVar`)
  --> PYI043.py:26:6
   |
25 | # PEP 695
26 | type _FooT = str | int
   |      ^^^^^
27 | type Foo = str | int
